--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,5 +9,9 @@
 
 @import '~jquery-ui/themes/base/all.css';
 
-@import "~noty/src/noty.scss";
-@import "~noty/src/themes/mint.scss";
+//@import "~noty/src/noty.scss";
+//@import "~noty/src/themes/mint.scss";
+
+//@import "noty.css";
+
+@import '~vuejs-noty/dist/vuejs-noty.css';
